syntax = "proto3";

option go_package = "https://github.com/paveldroo/sso-service/protos/sso";

package sso;

service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse) {};
    rpc Login(LoginRequest) returns (LoginResponse) {};
    rpc IsAdmin(IsAdminRequest) returns (IsAdminResponse) {};
}

message LoginRequest {
    string email = 1;
    string password = 2;
    uint32 appID = 3;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    int64 userID = 1;
}

message IsAdminRequest {
    int64 userID = 1;
}

message IsAdminResponse {
    bool isAdmin = 1;
}
